--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         Similique dolore a eligendi dignissimos, quasi obcaecati, 
         sed tempore ducimus sint sunt necessitatibus 
         magnam unde neque commodi harum,
-         delectus optio praesentium corporis.</p>
+         delectus optio praesentium corporis. Lorem ipsum dolor sit 
+         amet consectetur adipisicing elit. Nostrum minus fuga 
+         dignissimos impedit id unde explicabo, quisquam porro 
+         adipisci quo quia incidunt repellendus, 
+         aut aperiam voluptatum a consectetur ad earum!</p>
 </body>
 </html>
